@@ -1,0 +1,5 @@
+#
+# MIPS 24K possible unit masks
+#
+name:zero type:mandatory default:0x0
+	0x0 No unit mask
